[tool.poetry]
name = "hola"
version = "0.1.0"
description = ""
authors = ["ianok"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyqt6 = "^6.8.0"
pyinstaller = "^6.11.1"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
build = "pyinstaller --clean --noconsole --name=PyCalc6 main.py "